--- a/channel/recruitment.html
+++ b/channel/recruitment.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
                             <p class="text-sm text-gray-300 text-center">Membantu menjaga suasana obrolan tetap nyaman
                                 dan
@@ -107,7 +107,7 @@
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
                             <p class="text-sm text-gray-300 text-center">Mengatur dan memimpin event seru untuk
                                 komunitas.
@@ -115,13 +115,13 @@
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
                             <p class="text-sm text-gray-300 text-center">Meningkatkan citra server di dunia luar.</p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
                             <p class="text-sm text-gray-300 text-center">Merencanakan dan menjalankan acara kreatif
                                 untuk
@@ -129,23 +129,22 @@
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
                             <p class="text-sm text-gray-300 text-center">Menjalin kerja sama dengan komunitas atau
                                 organisasi lainnya.</p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
                             <p class="text-sm text-gray-300 text-center">Membantu mendesain konten visual yang menarik.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource
-                                Development</h2>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource</h2>
                             <p class="text-sm text-gray-300 text-center">Membantu merekrut dan mengelola staff lainnya.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
