--- a/channel/staff.html
+++ b/channel/staff.html
@@ -38,7 +38,7 @@
                 <li><a href="donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
                 <li><a href="recruitment.html"
-                        class="text-white hover:text-white bg-yellow-500 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
+                        class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
             </ul>
         </nav>
