--- a/channel/donate.html
+++ b/channel/donate.html
@@ -39,7 +39,7 @@
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
                 </li>
                 <li><a href="recruitment.html"
-                        class="text-white hover:text-white bg-yellow-500 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
+                        class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
             </ul>
         </nav>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="flex justify-center">
                         <p
-                            class="py-2 px-5 bg-yellow-400 my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-yellow-500">
+                            class="py-2 px-5 bg-yellow-500 my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-yellow-600">
                             <a href="https://sociabuzz.com/phionne/tribe" target="_blank"
                                 class="text-black font-semibold">Donate
                                 Now</a>
