--- a/channel/recruitment.html
+++ b/channel/recruitment.html
@@ -161,8 +161,8 @@
                     </div>
                     <div class="text-center mt-6">
                         <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
-                            class="px-6 py-3 bg-yellow-500 text-black font-bold rounded-lg shadow-lg hover:bg-yellow-600 transition-all">Bergabung
-                            ke Staff</a>
+                            class="px-6 py-3 bg-yellow-500 text-white font-bold rounded-lg shadow-lg hover:bg-yellow-600 transition-all">Join
+                            Now</a>
                     </div>
                 </div>
             </div>
