--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="flex justify-center md:justify-start">
                         <a href="https://discord.gg/MwNE7Vfb6t" target="_blank"
                             class="px-8 py-3 bg-yellow-500 text-white font-medium rounded-lg mt-6 hover:bg-yellow-600 transition-all duration-300">
-                            Join Us
+                            Join Server
                         </a>
                     </div>
                 </div>
