--- a/channel/donate.html
+++ b/channel/donate.html
@@ -183,9 +183,9 @@
                     </div>
                     <div class="flex justify-center">
                         <p
-                            class="py-2 px-5 bg-yellow-500 my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-yellow-600">
+                            class="py-2 px-5  bg-yellow-500 my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-yellow-600">
                             <a href="https://sociabuzz.com/phionne/tribe" target="_blank"
-                                class="text-black font-semibold">Donate
+                                class="text-white font-semibold">Donate
                                 Now</a>
                         </p>
                     </div>
