--- a/channel/recruitment.html
+++ b/channel/recruitment.html
@@ -94,70 +94,63 @@
                     <div class="recruitmentBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">RECRUITMENT <span
                                 class="text-yellow-500">STAFF</span></h1>
-                        <p class="text-gray-400 text-sm mt-2">Bergabunglah dengan tim kami dan bantu membangun komunitas
-                            yang lebih baik!</p>
+                        <p class="text-gray-400 text-sm mt-2">Join our team and help build a community better!</p>
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
-                            <p class="text-sm text-gray-300 text-center">Membantu menjaga suasana obrolan tetap nyaman
-                                dan
-                                kondusif.</p>
+                            <p class="text-sm text-gray-300 text-center">Helps keep the chat atmosphere comfortable and
+                                conducive.</p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
-                            <p class="text-sm text-gray-300 text-center">Mengatur dan memimpin event seru untuk
-                                komunitas.
+                            <p class="text-sm text-gray-300 text-center">Organize and lead exciting events to community.
                             </p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
-                            <p class="text-sm text-gray-300 text-center">Meningkatkan citra server di dunia luar.</p>
+                            <p class="text-sm text-gray-300 text-center">Improve server image in the outside world.</p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
-                            <p class="text-sm text-gray-300 text-center">Merencanakan dan menjalankan acara kreatif
-                                untuk
-                                komunitas.</p>
+                            <p class="text-sm text-gray-300 text-center">Plan and run creative events for community.
+                            </p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
-                            <p class="text-sm text-gray-300 text-center">Menjalin kerja sama dengan komunitas atau
-                                organisasi lainnya.</p>
+                            <p class="text-sm text-gray-300 text-center">Establish cooperation with the community or
+                                other organizations.</p>
                             <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
-                            <p class="text-sm text-gray-300 text-center">Membantu mendesain konten visual yang menarik.
+                            <p class="text-sm text-gray-300 text-center">Helps design interesting visual content.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource</h2>
-                            <p class="text-sm text-gray-300 text-center">Membantu merekrut dan mengelola staff lainnya.
+                            <p class="text-sm text-gray-300 text-center">Helps recruit and manage other staff.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                     </div>
                     <div class="text-center my-9 justify-center flex">
-                        <p class="sm:max-w-[60vw] text-gray-400 text-sm ">Semua posisi ini tidak dibayar. Kami mencari
-                            orang-orang yang sukarela dan
-                            memiliki keinginan
-                            tulus untuk
-                            membantu server ini berkembang. Semangatmu untuk berkontribusi dan membangun komunitas yang
-                            lebih baik adalah
-                            hal yang paling kami hargai!</p>
+                        <p class="sm:max-w-[60vw] text-gray-400 text-sm ">All of these positions are not paid. We are
+                            looking for people who volunteer and have desires sincere for help this
+                            server develop. Your passion to contribute and build community that better is the thing we
+                            value the most!</p>
                     </div>
                     <div class="text-center mt-6">
                         <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
