--- a/channel/staff.html
+++ b/channel/staff.html
@@ -122,8 +122,8 @@
             <!-- STAFF CATEGORY -->
             <div>
                 <div class="text-center my-20">
-                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Manager
-                            Division</span>
+                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Division
+                            Manager</span>
                     </h1>
                     <p class="text-sm">List Manager Division</p>
                 </div>
