--- a/channel/staff.html
+++ b/channel/staff.html
@@ -8,14 +8,14 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/img/logo.png">
     <script src="https://kit.fontawesome.com/924d8b81d8.js" crossorigin="anonymous"></script>
-    <title>STAFF</title>
+    <title>Staff</title>
 </head>
 
 <body>
     <header
         class="fixed top-0 left-0 flex items-center justify-between px-6 py-4 w-full z-50 bg-black/50 backdrop-blur-md text-white">
         <div class="flex">
-            <img src="../assets/img/logo2.png" class="w-32" alt="smkn5kiev">
+            <img src="../assets/img/logo2.png" class="w-20 sm:w-32" alt="smkn5kiev">
         </div>
         <button id="hamburger"
             class="block md:hidden focus:outline-none transition-transform duration-300 transform hover:scale-125"
