--- a/channel/donate.html
+++ b/channel/donate.html
@@ -108,13 +108,13 @@
                                 <li>Mendapat role @Contributor</li>
                                 <li>Bebas request Custom Role</li>
                                 <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Mendapatkan tambahan +3 Arcane Level</li>
-                                <li>Nama di-display dibawah role Trainee</li>
+                                <li>+3 Arcane Level</li>
+                                <li>Di-display dibawah role Trainee</li>
                             </ul>
                             <div>
                                 <p class="text-xs text-gray-400">* Permanent Role</p>
                                 <p class="text-xs text-gray-400">* Minimal donate 50k</p>
-                                <p class="text-xs text-gray-400">* Isi bagian "pesan" dengan nickname discord</p>
+                                <p class="text-xs text-gray-400">* Bagian "pesan" isi nickname discord</p>
                                 <p class="text-xs text-gray-400">* Sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
@@ -130,13 +130,13 @@
                                 <li>Mendapatkan role @Donator</li>
                                 <li>Bebas request custom role</li>
                                 <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Mendapatkan tambahan +1 Arcane Level</li>
-                                <li>Nama di-display dibawah Contributor</li>
+                                <li>+1 Arcane Level</li>
+                                <li>Di-display dibawah Contributor</li>
                             </ul>
                             <div>
                                 <p class="text-xs text-gray-400">* Permanent Role</p>
                                 <p class="text-xs text-gray-400">* Non-permanent Custom Role</p>
-                                <p class="text-xs text-gray-400">* Isi bagian "pesan" dengan nickname discord</p>
+                                <p class="text-xs text-gray-400">* Bagian "pesan" isi nickname discord</p>
                                 <p class="text-xs text-gray-400">* sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
@@ -151,7 +151,7 @@
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Booster</li>
                                 <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Nama di-display dibawah role @Donator</li>
+                                <li>Di-display dibawah role @Donator</li>
                                 <li>Bebas request Custom Role</li>
                             </ul>
                             <div>
@@ -170,11 +170,11 @@
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Benefactor</li>
                                 <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Nama di-display dibawah role @Booster</li>
+                                <li>Di-display dibawah role @Booster</li>
                             </ul>
                             <div>
                                 <p class="text-xs text-gray-400">* Berlaku selama 1 bulan</p>
-                                <p class="text-xs text-gray-400">* Sudah berdonasi? Silahkan buka ticket</p>
+                                <p class="text-xs text-gray-400">* Ingin berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
                                 <span class="text-lg font-bold text-yellow-500">1.000.000 UwU</span>
