--- a/channel/staff.html
+++ b/channel/staff.html
@@ -84,8 +84,118 @@
 
     </header>
 
+    <!-- Organizational Structure of SMKN 5 KIEV -->
+    <div class="sectionOrganization bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
+        id="organization">
+        <div class="organizationContainer container mx-auto px-4" data-aos="fade-up">
+            <div class="organizationBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
+                <div class="organizationBox-item">
+                    <div class="organizationBox-itemTitle text-center mb-6">
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
+                            📌 <span class="text-yellow-500">ORGANIZATIONAL STRUCTURE</span> SMKN 5 KIEV
+                        </h1>
+                    </div>
+
+                    <!-- Container for divisions -->
+                    <div class="organizationBox-itemList flex flex-wrap gap-4 justify-center">
+                        <!-- Community Manager -->
+                        <div
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg font-semibold text-white">Community Manager (Admin)</h2>
+                            <p class="text-gray-400 text-sm mt-2">Leads and oversees the server, makes major decisions,
+                                and
+                                ensures smooth community operations.</p>
+                        </div>
+
+                        <!-- Division Manager -->
+                        <div
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg font-semibold text-white">Division Manager</h2>
+                            <p class="text-gray-400 text-sm mt-2">Responsible for managing and supervising each division
+                                within the community.</p>
+                        </div>
+
+                        <!-- Team Management -->
+                        <div
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg font-semibold text-white">Team Management (Staff)</h2>
+                            <p class="text-gray-400 text-sm mt-2">📢 Includes all the divisions below, with a Manager
+                                overseeing each division.</p>
+                        </div>
+
+                        <!-- List of Divisions -->
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-full">
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Developer</h3>
+                                <p class="text-gray-400 text-sm">Manages the website and server bots, ensuring the
+                                    system
+                                    runs smoothly.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Human Resource (HRD)</h3>
+                                <p class="text-gray-400 text-sm">Recruits new staff, oversees evaluations, and resolves
+                                    internal issues.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Brand Ambassador</h3>
+                                <p class="text-gray-400 text-sm">Promotes the community and maintains a positive server
+                                    image.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Event Organizer</h3>
+                                <p class="text-gray-400 text-sm">Plans and executes engaging and beneficial events.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Chat Moderator</h3>
+                                <p class="text-gray-400 text-sm">Monitors chats, enforces rules, and fosters positive
+                                    interactions.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Host Event</h3>
+                                <p class="text-gray-400 text-sm">Hosts events and actively interacts with members.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Designer</h3>
+                                <p class="text-gray-400 text-sm">Creates server designs, banners, and logos.</p>
+                            </div>
+
+                            <div
+                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
+                                <h3 class="text-base font-semibold text-yellow-400">Partner Manager</h3>
+                                <p class="text-gray-400 text-sm">Manages partnerships and maintains good relationships
+                                    with
+                                    server partners.</p>
+                            </div>
+                        </div>
+
+                        <!-- Trainee -->
+                        <div
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg font-semibold text-white">Trainee</h2>
+                            <p class="text-gray-400 text-sm mt-2">Learns the server work system before being placed in a
+                                suitable division.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- STAFF -->
-    <section id="staff" class="bg-black/90 text-white py-36 min-h-screen flex flex-col justify-center gap-10">
+    <section id="staff" class="bg-black/90 text-white py-12 min-h-screen flex flex-col justify-center gap-10">
         <div class="bg-black/20 p-10 container mx-auto rounded-lg shadow-lg h-full" data-aos="fade-up">
             <!-- STAFF CATEGORY -->
             <div>
@@ -244,7 +354,6 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- Footer -->
