--- a/channel/staff.html
+++ b/channel/staff.html
@@ -85,7 +85,7 @@
     </header>
 
     <!-- Organizational Structure of SMKN 5 KIEV -->
-    <div class="sectionOrganization bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
+    <div class="sectionOrganization bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white pt-32 pb-20"
         id="organization">
         <div class="organizationContainer container mx-auto px-4" data-aos="fade-up">
             <div class="organizationBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
@@ -195,7 +195,7 @@
     </div>
 
     <!-- STAFF -->
-    <section id="staff" class="bg-black/90 text-white py-12 min-h-screen flex flex-col justify-center gap-10">
+    <section id="staff" class="bg-black/90 px-5 text-white py-12 min-h-screen flex flex-col justify-center gap-10">
         <div class="bg-black/20 p-10 container mx-auto rounded-lg shadow-lg h-full" data-aos="fade-up">
             <!-- STAFF CATEGORY -->
             <div>
