--- a/channel/staff.html
+++ b/channel/staff.html
@@ -85,7 +85,7 @@
     </header>
 
     <!-- Organizational Structure of SMKN 5 KIEV -->
-    <div class="sectionOrganization bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white pt-32 pb-20"
+    <div class="sectionOrganization bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white pt-32"
         id="organization">
         <div class="organizationContainer container mx-auto px-4" data-aos="fade-up">
             <div class="organizationBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
@@ -124,7 +124,7 @@
                         </div>
 
                         <!-- List of Divisions -->
-                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-full">
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
                                 <h3 class="text-base font-semibold text-yellow-400">Developer</h3>
