--- a/channel/staff.html
+++ b/channel/staff.html
@@ -119,7 +119,7 @@
                         <div
                             class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <h2 class="text-lg font-semibold text-white">Team Management (Staff)</h2>
-                            <p class="text-gray-400 text-sm mt-2">📢 Includes all the divisions below, with a Manager
+                            <p class="text-gray-400 text-sm mt-2">Includes all the divisions below, with a Manager
                                 overseeing each division.</p>
                         </div>
 
