--- a/channel/rules.html
+++ b/channel/rules.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/img/logo.png">
     <script src="https://kit.fontawesome.com/924d8b81d8.js" crossorigin="anonymous"></script>
-    <title>Leaderboard</title>
+    <title>Rules</title>
 </head>
 
 <body>
@@ -91,94 +91,32 @@
 
     </header>
 
-    <!-- Leaderboard -->
-    <section
-        class="sectionLeaderboard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
-        id="leaderboard">
-        <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
-            <div class="leaderboardBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
-                <div class="leaderboardBox-item">
-                    <div class="leaderboardBox-itemTitle text-center mb-6">
-                        <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                            🏆 MONTHLY <span class="text-yellow-500">LEADERBOARD</span>
+    <!-- Rules of Discord Server -->
+    <div class="sectionRules bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32 px-4"
+        id="rules">
+        <div class="rulesContainer container mx-auto" data-aos="fade-up">
+            <div class="rulesBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
+                <div class="rulesBox-item">
+                    <div class="rulesBox-itemTitle text-center mb-6">
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
+                            📜 <span class="text-yellow-500">SERVER RULES</span>
                         </h1>
-                        <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
                     </div>
 
-                    <!-- Kontainer untuk item -->
-                    <div class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
-                        <!-- Item 1 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s1.png" alt="s1"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏆 Season #1 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 2 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s2.png" alt="s2"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥈 Season #2 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 3 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s3.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥉 Season #3 | nsx4y</p>
-                            </div>
-                        </div>
-                        <!-- Item 4 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s4.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #4 | Yura</p>
-                            </div>
-                        </div>
-                        <!-- Item 5 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s5.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #5 | Tame</p>
-                            </div>
-                        </div>
-                        <!-- Item 6 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s6.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #6 | Tame</p>
-                            </div>
-                        </div>
+                    <!-- Rules Card -->
+                    <div
+                        class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-full sm:w-96 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400 mx-auto max-w-md">
+                        <h2 class="text-lg font-semibold text-white">General Rules</h2>
+                        <ul class="text-gray-400 text-sm mt-2 list-disc list-inside">
+                            <li>Respect other members</li>
+                            <li>Use your brain (optional)</li>
+                        </ul>
+                        <p class="text-gray-400 text-sm mt-4"><strong>Punishment:</strong> <em>Mute 1h - Banned</em></p>
                     </div>
                 </div>
-
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Footer -->
     <section id="footer" class="bg-zinc-950 text-white py-12">
