--- a/channel/donate.html
+++ b/channel/donate.html
@@ -38,6 +38,8 @@
                 <li><a href="donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
                 </li>
+                <li><a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                </li>
                 <li><a href="recruitment.html"
                         class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
@@ -75,6 +77,10 @@
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
                     </a>
+                    <a href="rules.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📜 Rules
+                    </a>
                     <a href="recruitment.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         📚 Recruitment
@@ -86,14 +92,15 @@
     </header>
 
     <!-- Donation List -->
-    <div class="sectionDonate bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
+    <section
+        class="sectionDonate bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
         id="donate">
         <div class="donateContainer container mx-auto px-4" data-aos="fade-up">
             <div class="donateBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
                 <div class="donateBox-item">
                     <div class="donateBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            SUPPORT US <span class="text-yellow-500">BY DONATE TO SERVER</span>
+                            💰 SUPPORT US <span class="text-yellow-500">BY DONATE TO SERVER</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Donasi dari kamu bisa membantu kami membangun negeri</p>
                     </div>
@@ -193,7 +200,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- Footer -->
