--- a/channel/recruitment.html
+++ b/channel/recruitment.html
@@ -38,6 +38,8 @@
                 <li><a href="donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
                 </li>
+                <li><a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                </li>
                 <li><a href="recruitment.html"
                         class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
@@ -75,6 +77,10 @@
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
                     </a>
+                    <a href="rules.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📜 Rules
+                    </a>
                     <a href="recruitment.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         📚 Recruitment
@@ -86,13 +92,14 @@
     </header>
 
     <!-- Recruitment Card -->
-    <div class="recruitmentCard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
+    <section
+        class="recruitmentCard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
         id="recruitment">
         <div class="recruitmentContainer container mx-auto px-4" data-aos="fade-up">
             <div class="recruitmentBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
                 <div class="recruitmentBox-item">
                     <div class="recruitmentBox-itemTitle text-center mb-6">
-                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">RECRUITMENT <span
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">📚 RECRUITMENT <span
                                 class="text-yellow-500">STAFF</span></h1>
                         <p class="text-gray-400 text-sm mt-2">Join our team and help build a community better!</p>
                     </div>
@@ -160,7 +167,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Footer -->
     <section id="footer" class="bg-zinc-950 text-white py-12">
         <div class="container mx-auto px-4">
