--- a/channel/staff.html
+++ b/channel/staff.html
@@ -37,6 +37,8 @@
                 </li>
                 <li><a href="donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
+                <li><a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                </li>
                 <li><a href="recruitment.html"
                         class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
@@ -44,7 +46,7 @@
         </nav>
 
         <!-- Dropdown menu for mobile -->
-        <nav id="dropdown-menu"
+        <section id="dropdown-menu"
             class="md:hidden absolute top-20 left-1/2 -translate-x-1/2 w-11/12 bg-black/80 border border-yellow-400 p-4 rounded-xl shadow-lg transform transition-all duration-300 hidden text-center backdrop-blur-lg">
             <ul class="space-y-2">
                 <li>
@@ -74,13 +76,17 @@
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
                     </a>
+                    <a href="rules.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📜 Rules
+                    </a>
                     <a href="recruitment.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         📚 Recruitment
                     </a>
                 </li>
             </ul>
-        </nav>
+        </section>
 
     </header>
 
@@ -92,7 +98,7 @@
                 <div class="organizationBox-item">
                     <div class="organizationBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            📌 <span class="text-yellow-500">ORGANIZATIONAL STRUCTURE</span> SMKN 5 KIEV
+                            👥 <span class="text-yellow-500">ORGANIZATIONAL STRUCTURE</span> SMKN 5 KIEV
                         </h1>
                     </div>
 
