--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                         class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a></li>
                 <li><a href="channel/donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
+                <li><a href="channel/rules.html"
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a></li>
                 <li><a href="channel/recruitment.html"
                         class="text-white hover:text-white bg-yellow-500 hover:bg-yellow-600 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
@@ -78,6 +80,10 @@
                     <a href="channel/donate.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
+                    </a>
+                    <a href="channel/rules.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📜 Rules
                     </a>
                     <a href="channel/recruitment.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
@@ -121,7 +127,7 @@
             <!-- Header Section -->
             <div class="text-center">
                 <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                    ABOUT <span class="text-yellow-500">SMKN 5 KIEV</span>
+                    ❓ ABOUT <span class="text-yellow-500">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
