--- a/channel/rules.html
+++ b/channel/rules.html
@@ -111,7 +111,8 @@
                             <li>Respect other members</li>
                             <li>Use your brain (optional)</li>
                         </ul>
-                        <p class="text-gray-400 text-sm mt-4"><strong>Punishment:</strong> <em>Mute 1h - Banned</em></p>
+                        <p class="text-gray-400 text-sm mt-4"><strong>Punishment :</strong> <em>Mute 1h - Banned</em>
+                        </p>
                     </div>
                 </div>
             </div>
