--- a/channel/donate.html
+++ b/channel/donate.html
@@ -196,7 +196,42 @@
                                 Now</a>
                         </p>
                     </div>
-
+                    <!-- Donation Log -->
+                    <div class="donationLog bg-zinc-900 rounded-lg p-5 mt-10 shadow-lg">
+                        <h2 class="text-lg sm:text-xl font-semibold text-yellow-500 text-center mb-4">📝 Donation Log
+                        </h2>
+                        <table class="w-full text-left border-collapse">
+                            <thead>
+                                <tr class="border-b border-gray-700">
+                                    <th class="py-2 px-4 text-white">Nama</th>
+                                    <th class="py-2 px-4 text-white">Note</th>
+                                    <th class="py-2 px-4 text-white">Jumlah</th>
+                                </tr>
+                            </thead>
+                            <tbody id="donationTable" class="text-gray-300">
+                                <tr>
+                                    <td class="py-2 px-4">Tame</td>
+                                    <td class="py-2 px-4">Untuk perkembangan server!</td>
+                                    <td class="py-2 px-4 text-yellow-500">Rp5.000</td>
+                                </tr>
+                                <tr>
+                                    <td class="py-2 px-4">Luhut</td>
+                                    <td class="py-2 px-4">Untuk perkembangan server!</td>
+                                    <td class="py-2 px-4 text-yellow-500">Rp10.000</td>
+                                </tr>
+                                <tr>
+                                    <td class="py-2 px-4">Vendrika</td>
+                                    <td class="py-2 px-4">Untuk perkembangan server!</td>
+                                    <td class="py-2 px-4 text-yellow-500">Rp50.000</td>
+                                </tr>
+                                <tr>
+                                    <td class="py-2 px-4">Lenn</td>
+                                    <td class="py-2 px-4">Untuk perkembangan server!</td>
+                                    <td class="py-2 px-4 text-yellow-500">Rp10.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
